# MyMusic

./: .gitignore  README.md  TODO.md  music.db  pyproject.toml
app/: config.py  main.py
app/auth/: jwt_helpers.py  validation.py
app/database/: db.py
app/models/: __init__.py  artists.py  genres.py  tracks.py
app/repositories/: artists.py  base.py  genres.py  tracks.py
app/routes/: __init__.py  artists.py  auth.py  tracks.py
app/schemas/: artists.py  genres.py  tracks.py
app/services/: artist_service.py  track_service.py
